--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -1,11 +1,92 @@
 {{template "base" .}}
 {{define "content"}}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1> This is the home page </h1>
-                <p>helloworld!</p>
-            </div>
+    
+    <div
+      id="main-carousel"
+      class="carousel slide carousel-fade"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#main-carousel"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#main-carousel"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#main-carousel"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="/static/images/abstract.jpg"
+            class="d-block w-100"
+            alt="abstract"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>abstract</h5>
+            <p>beautiful printing.</p>
+          </div>
         </div>
+        <div class="carousel-item">
+          <img
+            src="/static/images/business.jpg"
+            class="d-block w-100"
+            alt="business"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>business</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/static/images/tech.jpg" class="d-block w-100" alt="tech" />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>tech</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1 class="text-center mt-4">Welcom to my coding world!!</h1>
+          <p>
+            this is the testing page. and build by golang! and enjoy your life~
+            together! this is the testing page. and build by golang! and enjoy
+            your life~ together! this is the testing page. and build by golang!
+            and enjoy your life~ together! this is the testing page. and build
+            by golang! and enjoy your life~ together! this is the testing page.
+            and build by golang! and enjoy your life~ together! this is the
+            testing page. and build by golang! and enjoy your life~ together!
+            this is the testing page. and build by golang! and enjoy your life~
+            together! this is the testing page. and build by golang! and enjoy
+            your life~ together!
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col text-center">
+          <a href="/search-availability" class="btn btn-warning">
+            Make Reservation Now
+          </a>
+        </div>
+      </div>
+    </div>
+
 {{end}}
