--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -22,6 +22,7 @@
       href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css"
     />
     <link
+      rel="stylesheet"
       type="text/css"
       href="https://unpkg.com/notie/dist/notie.min.css"
     />
@@ -182,6 +183,18 @@
           confirmButtonText: confirmButtonText,
         });
       }
+      
+      {{with .Error}}
+        notify("{{.}}", "error")
+      {{end}}
+
+      {{with .Flash}}
+        notify("{{.}}", "success")
+      {{end}}
+
+      {{with .Warning}}
+        notify("{{.}}", "warning")
+      {{end}}
 
       function Prompt() {
         let toast = function (c) {
