--- a/templates/temp.html
+++ b/templates/temp.html
@@ -1,43 +1,35 @@
-<script>
-  document
-    .getElementById("check-availability-button")
-    .addEventListener("click", function () {
-      let html = `    <form
-        id="check-availability-form"
-        action=""
-        method="post"
-        novaidate
-        class="needs-validation"
-      >
-        <div class="row">
-          <div clsass="col">
-            <div class="row" id="reservation-dates-modal">
-              <div class="col">
-                <input
-                  disabled
-                  required
-                  class="form-control"
-                  type="text"
-                  name="start"
-                  id="start"
-                  placeholder="Arrival"
-                />
-              </div>
-              <div class="col">
-                <input
-                  disabled
-                  required
-                  class="form-control"
-                  type="text"
-                  name="end"
-                  id="end"
-                  placeholder="Departure"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </form>`;
-      attention.custom({ msg: html, title: "Choose your dates" });
-    });
-</script>
+{{template "base" .}} {{define "content"}}
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1 class="mt-5">Reservation Summary</h1>
+      <hr />
+      <table class="table table-striped">
+        <thead></thead>
+        <tbody>
+          <tr>
+            <td>Name:</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Arrival:</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Departure:</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Email:</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Phone:</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+{{end}}
